# StareDrop

./: Cargo.toml  LICENSE  README.md
crates/optigap-app/: Cargo.toml
crates/optigap-app/src/: app.rs  benchmark_page.rs  main.rs  receiver_page.rs  sender_page.rs  ui_components.rs
crates/optigap-benchmark/: Cargo.toml
crates/optigap-benchmark/src/: json_export.rs  lib.rs  transfer_log.rs
crates/optigap-camera/: Cargo.toml
crates/optigap-chunking/: Cargo.toml
crates/optigap-chunking/src/: chunker.rs  lib.rs  reassembler.rs
crates/optigap-codec-grid/: Cargo.toml
crates/optigap-codec-grid/src/: encoder.rs  threshold.rs
crates/optigap-codec-qr/: Cargo.toml
crates/optigap-codec-qr/src/: decoder.rs  encoder.rs  rendered_qr.rs
crates/optigap-compression/: Cargo.toml
crates/optigap-compression/src/: lib.rs  zstd.rs
crates/optigap-core/: Cargo.toml
crates/optigap-core/src/: error.rs  frame.rs  lib.rs  manifest.rs  session.rs
crates/optigap-crypto/: Cargo.toml
crates/optigap-crypto/src/: encryption.rs
crates/optigap-protocol/: Cargo.toml
crates/optigap-protocol/src/: crc.rs  frame_binary.rs  frame_json.rs  lib.rs
crates/optigap-reliability/: Cargo.toml
crates/optigap-reliability/src/: parity.rs  repeat_all.rs
crates/staredrop-app/: Cargo.toml
crates/staredrop-app/src/: app.rs  cli.rs  main.rs  receiver_page.rs  sender_page.rs  settings.rs  simulate.rs  transfer.rs  visual_codec.rs
crates/staredrop-benchmark/: Cargo.toml
crates/staredrop-benchmark/src/: csv_export.rs  metrics.rs
crates/staredrop-camera/: Cargo.toml
crates/staredrop-camera/src/: camera.rs  devices.rs  frame.rs  lib.rs
crates/staredrop-chunking/: Cargo.toml
crates/staredrop-chunking/src/: chunk_store.rs  chunker.rs  reassembler.rs
crates/staredrop-codec-grid/: Cargo.toml
crates/staredrop-codec-grid/src/: decoder.rs  encoder.rs  lib.rs  perspective.rs  sampler.rs
crates/staredrop-codec-qr/: Cargo.toml
crates/staredrop-codec-qr/src/: decoder.rs  lib.rs
crates/staredrop-compression/: Cargo.toml
crates/staredrop-core/: Cargo.toml
crates/staredrop-core/src/: error.rs  lib.rs  progress.rs  types.rs
crates/staredrop-crypto/: Cargo.toml
crates/staredrop-crypto/src/: hash.rs  kdf.rs  lib.rs
crates/staredrop-protocol/: Cargo.toml
crates/staredrop-protocol/src/: control.rs  frame_binary.rs  frame_json.rs  manifest.rs
crates/staredrop-reliability/: Cargo.toml
crates/staredrop-reliability/src/: fountain_stub.rs  lib.rs  missing_chunks.rs
docs/: mvp-roadmap.md  terminal-usage.md
docs/protocol/: benchmarks.md  binary-format-v1.md  frame-format-v1.md  security.md
docs/research/: benchmark-history.csv  benchmark-results-2026-05-24.md  color-codec-research-2026-05-24.md  existing-projects.md
manual-tests/phase2/: MANUAL-CHECKLIST.md  SHA256SUMS.txt  sample.txt
tests/: integration_protocol.rs  integration_transfer.rs
