[workspace]
members = [
    "crates/optigap-app",
    "crates/optigap-core",
    "crates/optigap-protocol",
    "crates/optigap-chunking",
    "crates/optigap-codec-qr",
    "crates/optigap-codec-grid",
    "crates/optigap-camera",
    "crates/optigap-crypto",
    "crates/optigap-compression",
    "crates/optigap-reliability",
    "crates/optigap-benchmark",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["OptiGap Contributors"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bincode = "1.3"
postcard = { version = "1.1", features = ["alloc"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
crc32fast = "1.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
eframe = "0.27"
egui = "0.27"
rfd = "0.14"
qrcode = { version = "0.14", features = ["image"] }
rqrr = "0.10"
rscam = { version = "0.5", features = ["no_wrapper"] }
glob = "0.3"
rand = "0.9"
