[workspace]
members = [
    "crates/staredrop-app",
    "crates/staredrop-core",
    "crates/staredrop-protocol",
    "crates/staredrop-chunking",
    "crates/staredrop-codec-qr",
    "crates/staredrop-codec-grid",
    "crates/staredrop-camera",
    "crates/staredrop-crypto",
    "crates/staredrop-compression",
    "crates/staredrop-reliability",
    "crates/staredrop-benchmark",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["StareDrop Contributors"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bincode = "1.3"
postcard = { version = "1.1", features = ["alloc"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
crc32fast = "1.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "wgpu", "glow", "x11", "wayland"] }
egui = "0.27"
rfd = "0.14"
qrcode = { version = "0.14", features = ["image"] }
rqrr = "0.10"
rscam = { version = "0.5", features = ["no_wrapper"] }
glob = "0.3"
winit = "0.29"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
tempfile = "3.16"
