[package]
name = "optigap-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
rfd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
optigap-camera = { path = "../optigap-camera" }
optigap-codec-qr = { path = "../optigap-codec-qr" }
optigap-core = { path = "../optigap-core" }
