[package]
name = "staredrop-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
rfd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
staredrop-camera = { path = "../staredrop-camera" }
staredrop-codec-qr = { path = "../staredrop-codec-qr" }
staredrop-core = { path = "../staredrop-core" }
