[package]
name = "staredrop-chunking"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crc32fast.workspace = true
serde.workspace = true
thiserror.workspace = true
staredrop-core = { path = "../staredrop-core" }
