[package]
name = "staredrop-codec-qr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
qrcode.workspace = true
rqrr.workspace = true
staredrop-core = { path = "../staredrop-core" }
