[package]
name = "staredrop-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
crc32fast.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
staredrop-core = { path = "../staredrop-core" }
